# GPUBurden

./: Cargo.toml  LICENCE  README.md
examples/: default-shader.wgsl  distorted-noise.wgsl
src/: color.rs  color_ramp.rs  configuration.rs  main.rs  renderer.rs  wayland.rs
src/shaders/: frag-2.wgsl  frag.wgsl  vertex.wgsl
