[package]
name = "gpuburden"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
config = "0.15.19"
noise = "0.9.0"
pollster = "0.4.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
smithay-client-toolkit = {version = "0.20.0"}
wayland-backend = {version = "0.3.0", features = ["client_system"]}
wayland-client = "0.31.12"
wesl = "0.3.2"
wgpu = "27.0.1"
