[package]
name = "gpuburden"
version = "0.1.0"
authors = ["Sam Pert <sampert@hotmail.co.uk>"]
edition = "2024"
description = "Shader-based wallpapers for Wayland, burdening your GPU with fancy animations."
readme = "README.md"
repository = "https://github.com/SamPertWasTaken/GPUBurden"
license = "Apache-2.0"
keywords = ["graphics", "wayland", "shaders", "wallpaper", "linux"]
categories = ["rendering", "visualization"]

[dependencies]
bytemuck = "1.24.0"
config = "0.15.19"
pollster = "0.4.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
smithay-client-toolkit = {version = "0.20.0"}
wayland-backend = {version = "0.3.0", features = ["client_system"]}
wayland-client = "0.31.12"
wgpu = "27.0.1"
